@@ -1,3 +1,8 @@
+2009-10-07  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/gc_config_macros.h: Avoid the redefinition of
+	GC_xxx_THREADS macros.
+
 2009-10-06  Ivan Maidanski <ivmai@mail.ru>
 
 	* alloc.c (GC_try_to_collect_general): Change the type of "result"
